[package]
name = "rust-multidownloader"
version = "0.1.0"
authors = ["kokkiemouse <kokkiemouse@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
curl = "0.4.33"
regex = "1"
threadpool = "1"
indicatif = "0"
lazy_static = "1.4.0"